--- a/src/municipio.njk
+++ b/src/municipio.njk
@@ -157,17 +157,17 @@ tags:
                     
                     <ul class="semicircle-menu d-none d-lg-block" style="padding: 10px 0;">
                       <li><a href="#" class="tab-link active" data-target="#general"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-30.png">General</a></li>
-                      <li><a href="#" class="tab-link" data-target="#gestion-municipal"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-31.png">Gestión Municipal</a></li>
+                      <li><a href="#" class="tab-link" data-target="#gestion-municipal"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/Gestion municipal.png">Gestión Municipal</a></li>
                       <li><a href="#" class="tab-link" data-target="#transparencia"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-32.png">Transparencia</a></li>
                       <li><a href="#" class="tab-link" data-target="#nutricion"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-33.png">Nutrición</a></li>
                       <li><a href="#" class="tab-link" data-target="#pobreza"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-34.png">Pobreza</a></li>
                       <li><a href="#" class="tab-link" data-target="#finanzas"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-35.png">Finanzas</a></li>
                       <li><a href="#" class="tab-link" data-target="#poblacion"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-46.png">Población</a></li>
                       <li><a href="#" class="tab-link" data-target="#educacion"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-35.png">Educación</a></li>
-                      <li><a href="#" class="tab-link" data-target="#economia"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-33.png">Economía</a></li>
-                      <li><a href="#" class="tab-link" data-target="#salud"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-34.png">Salud</a></li>
-                      <li><a href="#" class="tab-link" data-target="#hogar"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-46.png">Hogar</a></li>
-                      <li><a href="#" class="tab-link" data-target="#vivienda"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-35.png">Vivienda</a></li>
+                      <li><a href="#" class="tab-link" data-target="#economia"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/Economía.png">Economía</a></li>
+                      <li><a href="#" class="tab-link" data-target="#salud"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/Salud.png">Salud</a></li>
+                      <li><a href="#" class="tab-link" data-target="#hogar"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/Hogar.png">Hogar</a></li>
+                      <li><a href="#" class="tab-link" data-target="#vivienda"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/Vivienda.png">Vivienda</a></li>
                     </ul>
                   </div>                  
             </div>
