--- a/src/base2.njk
+++ b/src/base2.njk
@@ -47,7 +47,7 @@
 		<header id="header" class="full-header header-size-md" data-mobile-sticky="true" style="border:none!important">
 			<div id="header-wrap">
 				<div class="container" >				
-					<div class="header-row justify-content-lg-between container" style="padding: 0;">
+					<div class="header-row" style="padding: 0; margin: 0 4% 0 2%;">
 
 						<!-- Logo
 						============================================= -->
