--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3925,7 +3925,7 @@ body:not(.top-search-open) .top-search-parent #primary-menu-trigger {
   display: block;
   line-height: 22px;
   padding: 14px 2px;
-  color: #14415a;
+  color: #000;
   font-weight: 700;
   font-size: 0.8125rem;
   letter-spacing: 1px;
