--- a/src/base.njk
+++ b/src/base.njk
@@ -153,7 +153,7 @@
 
 	<!-- Go To Top
 	============================================= -->
-	<div id="gotoTop" class="icon-angle-up"></div>
+	<div id="gotoTop" > <i class="fa-solid fa-arrow-up"></i></div>
 
 	<!-- JavaScripts
 	============================================= -->
