--- a/src/base2.njk
+++ b/src/base2.njk
@@ -107,7 +107,7 @@
 
 	<!-- Go To Top
 	============================================= -->
-	<div id="gotoTop" class="icon-angle-up"></div>
+	<div id="gotoTop"><i class="fa-solid fa-arrow-up"></i></div>
 
 	<!-- JavaScripts
 	============================================= -->
