--- a/src/index.njk
+++ b/src/index.njk
@@ -92,7 +92,7 @@ permalink: "index.html"
                     </div>
 
                     <div class="col-lg-6 my-4">
-                        <img src="/assets/img/elementos_mejoras/INTEROPERABILDIAD_GD-18.png">
+                        <img src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png">
                     </div>
 
                 </div>
