--- a/src/index.njk
+++ b/src/index.njk
@@ -82,7 +82,7 @@ permalink: "index.html"
                     <div class="col-lg-6 my-4">
                         <h1 class="text-titles">¿Qué es el Laboratorio Municipal?</h1>
                         <p class="mt-4">
-                            La interoperabilidad gubernamental se refiere a la capacidad de las instituciones públicas para trabajar juntas de manera eficiente mediante el intercambio de información y el uso compartido de sistemas tecnológicos. En Guatemala, la implementación de sistemas digitales en las instituciones públicas ha sido un proceso aislado, con soluciones específicas para cada entidad sin una integración adecuada entre ellas. Esto ha llevado a una fragmentación de la información y a una gobernanza menos eficiente.
+                            <b>Laboratorio Municipal</b> se enfoca en modernizar la gestión pública en los municipios de Guatemala, promoviendo el fortalecimiento de servicios públicos, la transparencia y la innovación. Su propósito es establecer un modelo colaborativo en las municipalidades, que les permita implementar prácticas de gobierno abierto, digitalización de procesos y participación ciudadana. 
                         </p>
                         <!-- <p class="mt-4">
                             <strong>
@@ -92,7 +92,7 @@ permalink: "index.html"
                     </div>
 
                     <div class="col-lg-6 my-4">
-                        <img src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png">
+                        <img src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png"> 
                     </div>
 
                 </div>
@@ -132,7 +132,18 @@ permalink: "index.html"
             </div>
         </section>
 
+        <!-- Que es
+        ============================================= -->
 
+        <section class="px-2" style="background-color: #fff;">
+            <div class="container clearfix ">
+                <div class="row align-items-center">
+                    <div class="col-lg-6 my-4 m-auto">
+                        <img src="/assets/img/elementos_mejoras/apoyo.png">
+                    </div>
+                </div>
+            </div>
+        </section>
 
 {% endblock %}
 
